@@ -20,13 +20,15 @@ public final class HttpEntityConnections {
    * @param domainId the id of the domain entities
    * @param serverHostName the http server host name
    * @param serverPort the http server port
+   * @param https true if https should be used
    * @param user the user
    * @param clientTypeId the client type id
    * @param clientId the client id
    * @return a http based EntityConnection
    */
-  public static EntityConnection createConnection(final String domainId, final String serverHostName, final int serverPort,
-                                                  final User user, final String clientTypeId, final UUID clientId) {
-    return new HttpEntityConnection(domainId, serverHostName, serverPort, user, clientTypeId, clientId);
+  public static EntityConnection createConnection(final String domainId, final String serverHostName,
+                                                  final int serverPort, final boolean https, final User user,
+                                                  final String clientTypeId, final UUID clientId) {
+    return new HttpEntityConnection(domainId, serverHostName, serverPort, https, user, clientTypeId, clientId);
   }
 }
